fix grid gap

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -393,53 +393,38 @@ section {
 }
 .grid {
     display: grid;
-    // gap: 1.5%;
-    row-gap: 30px;
-
-    grid-template-areas:
-            "a b c . d"
-            "e f g . h";
-    // grid-template-columns: 23% 11% 32% 2.3% 32%;
+    row-gap: 4.6%;
+    grid-template-areas:    "a b c . d" 
+                            "e f g . h";
     grid-auto-columns: 0.73fr 0.34fr 1fr 0.073fr 1fr;
     grid-auto-rows: 311px 311px;
-    // grid-auto-columns: 300px 140px 410px 30px 410px;
     &__cell {
         display: flex;
         align-items: end;
         padding: 0 0 24px 24px;
         border-radius: 16px;
         background-size: cover;
-        // width: calc(100% - 30px);
-        // height: calc(100% - 15px);
         &_1 {
             background-image: url(../img/grid2.png);
-            // width: 300px;
         }
         &_2 {
             background-image: url(../img/grid3.png);
             grid-column: span 2;
-            // width: 520px;
             width: calc(100% - 5.77%);
             justify-self: right;
         }
         &_3 {
             background-image: url(../img/grid1.png);
             grid-row: span 2;
-            // height: 100%;
             grid-column: 5;
-            // width: 410px;
         }
         &_4 {
             background-image: url(../img/grid4.png);
             grid-column: span 2;
-            // align-self: end;
-            // width: 410px;
             width: calc(100% - 5.77%);
         }
         &_5 {
             background-image: url(../img/grid5.png);
-            // align-self: end;
-            // width: 410px;
         }
     }
 }
